# job-agent

./: .gitignore  README.md  SwipeHire_EDA.ipynb  pyproject.toml
artifacts/indexes/: faiss.index
data/processed/: jobs.json
src/baselines/: bm25.py  tfidf.py
src/ingestion/: analyze_dataset.py  load_data.py
src/retrieval/: faiss_retriever.py  resume_parser.py
tests/: check_missing.py  test_retrieval.py
